--- a/index.html
+++ b/index.html
@@ -1,123 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Jose Zuniga – Agile Project Manager</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>José Zuniga - Resume</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f8f9fa; color: #333; }
-    header { background: #003366; color: white; padding: 2em; text-align: center; }
-    header h1 { margin: 0; font-size: 2.5em; }
-    header p { font-size: 1.2em; }
-
-    nav { text-align: center; margin-top: 1em; }
-    nav a { margin: 0 15px; text-decoration: none; color: #003366; font-weight: bold; }
-
-    section { max-width: 900px; margin: 2em auto; padding: 1em; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
-    h2 { color: #003366; }
-
-    .contact, .skills, .education, .certifications { margin-bottom: 2em; }
-    ul { padding-left: 20px; }
-    .job-title { font-weight: bold; color: #444; }
-    .job-company { font-style: italic; color: #666; }
-    .job-dates { font-size: 0.9em; color: #888; }
-    footer { text-align: center; padding: 1em 0; font-size: 0.8em; color: #666; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8fafc;
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 2rem;
+    }
+    .header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .header h1 {
+      font-size: 2.5rem;
+      color: #1e3a8a;
+    }
+    .header p {
+      font-size: 1rem;
+      color: #4b5563;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+    .section h2 {
+      font-size: 1.5rem;
+      color: #1e3a8a;
+      margin-bottom: 0.5rem;
+    }
+    .list {
+      list-style-type: disc;
+      margin-left: 2rem;
+    }
+    .contact-info, .work-experience, .education, .languages {
+      margin-bottom: 2rem;
+    }
+    .work-item {
+      margin-bottom: 1rem;
+    }
+    .work-item h3 {
+      font-size: 1.2rem;
+      color: #1e3a8a;
+    }
+    .work-item ul {
+      margin-left: 1.5rem;
+    }
+    .contact-info ul, .languages ul, .education ul {
+      margin-left: 0;
+    }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Jose Zuniga</h1>
-  <p>Senior Agile Project Manager | Scrum Master | Program Manager</p>
-  <p>📍 Heredia, Costa Rica | 📧 josean.111@gmail.com | 📱 +506 8897 5841</p>
-  <p><a href="https://linkedin.com/in/jose-azuniga" target="_blank" style="color: #ffffff;">LinkedIn Profile</a></p>
-</header>
+<div class="container">
 
-<nav>
-  <a href="#about">About</a>
-  <a href="#experience">Experience</a>
-  <a href="#skills">Skills</a>
-  <a href="#certifications">Certifications</a>
-  <a href="#education">Education</a>
-  <a href="#contact">Contact</a>
-</nav>
+  <!-- Header Section -->
+  <div class="header">
+    <h1>José Zuniga</h1>
+    <p>Senior Project Manager | Scrum Master</p>
+    <p>Email: josean.111@gmail.com | Phone: +506 8897 5841</p>
+    <p>Location: Heredia, Costa Rica</p>
+    <p>LinkedIn: linkedin.com/in/jose-azuniga</p>
+    <p>Portfolio: josean111.github.io/jose-zuniga-portfolio-/</p>
+  </div>
 
-<section id="about">
-  <h2>About Me</h2>
-  <p>
-    A results-driven Senior Project Manager and Scrum Master with over 16 years of experience leading cross-functional teams across dynamic, global industries. Specializing in Agile, Scrum, Kanban, and SAFe, I manage complex projects from concept to delivery, improving workflow efficiency, team collaboration, and business outcomes.
-  </p>
-</section>
+  <!-- Education Section -->
+  <div class="section education">
+    <h2>Education</h2>
+    <ul class="list">
+      <li>Master's Degree in Project Management | Master Cum Laude | Spain</li>
+      <li>Master's Degree in Business Administration | Master Cum Laude | Spain</li>
+      <li>Bachelor's Degree in Computer Science | ULACIT, Costa Rica</li>
+    </ul>
+  </div>
 
-<section id="experience">
-  <h2>Work Experience</h2>
+  <!-- Certifications Section -->
+  <div class="section certifications">
+    <h2>Certifications</h2>
+    <ul class="list">
+      <li>Certified Scrum Master (CSM) (ID: 561348)</li>
+      <li>Agile Certified Practitioner (PMI-ACP)</li>
+      <li>SAFe® 4 Certified Practitioner (Scaled Agile, Inc.)</li>
+      <li>Amazon Web Services Cloud Practitioner</li>
+    </ul>
+  </div>
 
-  <p class="job-title">Senior Program Agile Manager – <span class="job-company">iTree Training</span> <span class="job-dates">(2022–2024)</span></p>
-  <ul>
-    <li>Led Agile transformation for 45+ collaborators, increasing productivity by 35% and reducing time-to-market by 40%.</li>
-    <li>Improved sprint planning and backlog refinement, cutting delivery delays by 25%.</li>
-    <li>Boosted stakeholder satisfaction by 20% through better communication and reporting.</li>
-  </ul>
+  <!-- Work Experience Section -->
+  <div class="section work-experience">
+    <h2>Work Experience</h2>
+    
+    <!-- Job 1 -->
+    <div class="work-item">
+      <h3>iTree Training | Senior Program Agile Manager | 2022 – 2025</h3>
+      <p>Led several Agile projects, closely working with cross-functional teams to meet business goals, while ensuring alignment with company priorities.</p>
+      <ul>
+        <li>Increased productivity by 35% and reduced time-to-market by 40%.</li>
+        <li>Improved sprint planning and backlog refinement, reducing delivery delays by 25%.</li>
+        <li>Established strong relationships with key stakeholders, increasing satisfaction by 20%.</li>
+      </ul>
+    </div>
 
-  <p class="job-title">Site Reliability Engineer – <span class="job-company">IBM</span> <span class="job-dates">(2021–2024)</span></p>
-  <ul>
-    <li>Implemented predictive maintenance strategies, reducing outages by 6%.</li>
-    <li>Developed DR plans and optimized infrastructure, lowering costs and improving uptime.</li>
-  </ul>
+    <!-- Job 2 -->
+    <div class="work-item">
+      <h3>IBM | Site Reliability Engineer | 2021 – 2024</h3>
+      <p>Focused on maintaining system uptime, reliability, and continuous improvement through proactive strategies.</p>
+      <ul>
+        <li>Reduced unplanned outages by 6% through predictive maintenance.</li>
+        <li>Enhanced disaster recovery processes, improving recovery success rates by 12%.</li>
+      </ul>
+    </div>
 
-  <p class="job-title">Scrum Master / Engineering PM – <span class="job-company">Optiva</span> <span class="job-dates">(2019–2021)</span></p>
-  <ul>
-    <li>Led global teams in a 24/7 support model, delivering 95% of projects on time.</li>
-    <li>Managed $50M+ budgets, saving 10–12% through efficient resource planning.</li>
-  </ul>
+    <!-- Job 3 -->
+    <div class="work-item">
+      <h3>Optiva | Scrum Master / Engineering Project Manager | 2019 – 2021</h3>
+      <p>Led teams transitioning to Agile methodologies while managing complex engineering projects.</p>
+      <ul>
+        <li>Coordinated cross-functional teams, ensuring alignment across time zones.</li>
+        <li>Delivered 95% of projects on time, cutting delays by 20%.</li>
+      </ul>
+    </div>
 
-  <p class="job-title">Engineering Project Manager – <span class="job-company">Equifax</span> <span class="job-dates">(2012–2019)</span></p>
-  <ul>
-    <li>Increased CI/CD efficiency by 20%, and automated deployment pipelines by 50%.</li>
-    <li>Migrated systems to cloud infrastructure, reducing OPEX by 22%.</li>
-  </ul>
-</section>
+    <!-- Job 4 -->
+    <div class="work-item">
+      <h3>Equifax | Engineering Project Manager | 2015 – 2019</h3>
+      <p>Led cross-functional teams in developing and deploying data analytics solutions to optimize business operations.</p>
+      <ul>
+        <li>Reduced project delivery timelines by 15% through streamlined cycles.</li>
+        <li>Led 5+ large-scale projects, generating a combined revenue increase of $15M.</li>
+      </ul>
+    </div>
+  </div>
 
-<section id="skills" class="skills">
-  <h2>Technical Skills</h2>
-  <p><strong>Cloud & DevOps:</strong> AWS, Google Cloud, IBM Cloud, Azure, Docker, Terraform, Kubernetes</p>
-  <p><strong>Project Tools:</strong> Jira, Confluence, Slack, Trello, ServiceNOW, Workday, Asana</p>
-  <p><strong>Languages:</strong> Java, Python, JavaScript, Node.js, Shell Script</p>
-  <p><strong>Databases:</strong> Oracle, PostgreSQL, SQL Server</p>
-  <p><strong>OS:</strong> Windows, Unix, Linux</p>
-  <p><strong>Languages:</strong> Spanish (Native), English (C2 – Bilingual)</p>
-</section>
+  <!-- Languages Section -->
+  <div class="section languages">
+    <h2>Languages</h2>
+    <ul class="list">
+      <li>Spanish: Native</li>
+      <li>English: C2 - Bilingual</li>
+    </ul>
+  </div>
 
-<section id="certifications" class="certifications">
-  <h2>Certifications</h2>
-  <ul>
-    <li>Certified Scrum Master (CSM)</li>
-    <li>PMI Agile Certified Practitioner (PMI-ACP)</li>
-    <li>SAFe® 4 Certified Practitioner</li>
-    <li>AWS Cloud Practitioner</li>
-  </ul>
-</section>
-
-<section id="education" class="education">
-  <h2>Education</h2>
-  <ul>
-    <li>Master's Degree in Project Management – Master Cum Laude, Spain</li>
-    <li>Master's Degree in Business Administration – Master Cum Laude, Spain</li>
-    <li>Bachelor's Degree in Computer Science – ULACIT, Costa Rica</li>
-  </ul>
-</section>
-
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:josean.111@gmail.com">josean.111@gmail.com</a></p>
-  <p>Phone: +506 8897 5841</p>
-  <p>Location: Heredia, Costa Rica</p>
-  <p>LinkedIn: <a href="https://linkedin.com/in/jose-azuniga" target="_blank">linkedin.com/in/jose-azuniga</a></p>
-</section>
-
-<footer>
-  &copy; 2025 Jose Zuniga. All rights reserved.
-</footer>
+</div>
 
 </body>
 </html>
