--- a/index.html
+++ b/index.html
@@ -1,116 +1,192 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>José Zúñiga - Resume</title>
+  <title>José Zuniga - Resume</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      background-color: #f8f9fa;
-      color: #212529;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f7fb;
+      color: #333;
     }
-    h1, h2 {
-      color: #0056b3;
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      background: #fff;
+      padding: 40px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1, h2, h3 {
+      color: #004080;
+    }
+    h1 {
+      font-size: 36px;
+    }
+    h2 {
+      margin-top: 30px;
+      font-size: 24px;
+    }
+    h3 {
+      margin-top: 20px;
+      font-size: 20px;
     }
     .section {
-      margin-bottom: 24px;
-    }
-    .company {
-      font-weight: bold;
-      font-size: 1.1em;
-      margin-top: 12px;
+      margin-bottom: 30px;
     }
     ul {
-      margin-top: 6px;
+      padding-left: 20px;
     }
-    li {
-      margin-bottom: 6px;
+    .contact {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+    .title-role {
+      font-weight: bold;
+      color: #333;
+    }
+    .subtitle {
+      color: #666;
+    }
+    .company {
+      font-size: 18px;
+      color: #004080;
+    }
+    .role-desc {
+      margin: 8px 0;
+      font-style: italic;
     }
   </style>
 </head>
 <body>
-  <h1>José Zúñiga</h1>
-  <p><strong>Location:</strong> Heredia, Costa Rica · <strong>Email:</strong> josezuniga@example.com · <strong>Languages:</strong> English (C2), Spanish (Native)</p>
+  <div class="container">
+    <h1>José Zuniga</h1>
+    <div class="contact">
+      Phone: +506 8897 5841<br>
+      Email: josean.111@gmail.com<br>
+      Heredia, Costa Rica<br>
+      LinkedIn: <a href="https://linkedin.com/in/jose-azuniga">linkedin.com/in/jose-azuniga</a><br>
+      Portfolio: <a href="https://josean111.github.io/jose-zuniga-portfolio-/">josean111.github.io</a>
+    </div><div class="section">
+  <h2>Professional Summary</h2>
+  <p>A results-driven Senior Project Manager and Scrum Master with over 16 years of experience leading cross-functional teams in dynamic environments across diverse industries. Adept at applying Agile methodologies, including Scrum, Kanban, and SAFe, to manage complex projects and programs from concept to successful delivery. Proven ability to drive business value by optimizing workflows, improving team collaboration, risk mitigation, resource planning, and ensuring timely, high-quality project outcomes.</p>
+</div>
 
-  <div class="section">
-    <h2>Summary</h2>
-    <p>Senior Project Manager and Scrum Master with 16+ years of experience leading Agile transformations, engineering projects, and cloud migrations across global teams. Proven track record in driving efficiency, delivering technical programs, and scaling DevOps capabilities in highly regulated environments.</p>
-  </div>
+<div class="section">
+  <h2>Work Experience</h2>
 
-  <div class="section">
-    <h2>Experience</h2>
-
-    <div class="company">iTree Training | 2021 – 2023</div>
-    <p><em>Global consulting and training firm specialized in IT service management, DevOps, and Agile transformation.</em></p>
-    <p><strong>Senior Agile Program Manager</strong></p>
+  <div>
+    <div class="company">iTree Training | 2022 - 2025</div>
+    <div class="subtitle">Senior Program Agile Manager</div>
+    <div class="role-desc">iTree is a global technology company that provides innovative training programs to enhance organizational efficiency and productivity.<br>Role Description: Led Agile projects, resource planning, and Agile ceremonies. Applied Scrum and SAFe to increase productivity and stakeholder satisfaction.</div>
     <ul>
-      <li>Oversaw large-scale transformation initiatives across LATAM clients, including cloud modernization and scaled Agile adoption (SAFe).</li>
-      <li>Trained over 150 professionals in Agile, Scrum, and Lean principles through tailored workshops and coaching sessions.</li>
-      <li>Improved Agile maturity assessment scores by 30% in 6 months for multiple enterprise clients.</li>
-    </ul>
-
-    <div class="company">IBM | 2020 – 2021</div>
-    <p><em>One of the world’s largest technology and consulting companies, providing cloud platform and cognitive solutions.</em></p>
-    <p><strong>Site Reliability Engineer</strong></p>
-    <ul>
-      <li>Implemented monitoring and automation practices for hybrid cloud services using Kubernetes and Terraform.</li>
-      <li>Reduced on-call incidents by 40% through proactive observability improvements.</li>
-      <li>Developed self-healing scripts that improved system uptime by 15%.</li>
-    </ul>
-
-    <div class="company">Optiva | 2019 – 2021</div>
-    <p><em>Global provider of mission-critical BSS solutions to telecom operators in 60+ countries.</em></p>
-    <p><strong>Engineering Project Manager & Scrum Master</strong></p>
-    <ul>
-      <li>Led Agile delivery of telecom BSS software for Tier-1 clients in North America and LATAM using Scrum and SAFe frameworks.</li>
-      <li>Delivered cloud-native CI/CD automation pipeline on GCP, reducing release time by 25%.</li>
-      <li>Improved Jira workflows and Agile metrics visibility, boosting team productivity by 20%.</li>
-    </ul>
-
-    <div class="company">Equifax | 2012 – 2019</div>
-    <p><em>Equifax is a global data, analytics, and technology company, providing businesses and individuals with trusted insights to make informed decisions.</em></p>
-    <p><strong>Engineering Project Manager | 2015 – 2019</strong></p>
-    <ul>
-      <li>Managed cloud migration and CI/CD pipeline projects, enhancing the software delivery lifecycle.</li>
-      <li>Increased team productivity by 20% with Scrum adoption.</li>
-      <li>Standardized CI/CD pipeline across departments, improving cross-functional workflows.</li>
-      <li>Automated build/deploy processes, reducing deployment cycle time by 50%.</li>
-    </ul>
-    <p><strong>Technical Project Manager | 2012 – 2015</strong></p>
-    <ul>
-      <li>Led infrastructure upgrades, internal tools, and API integrations.</li>
-      <li>Managed $600K IT infrastructure upgrade, improving performance by 40% and reducing downtime by 2 hours/month.</li>
+      <li>Increased productivity by 35% and reduced time-to-market by 40% through Agile practices.</li>
+      <li>Reduced delivery delays by 25% and improved on-time delivery by 30%.</li>
+      <li>Improved stakeholder satisfaction by 20% through transparency and reporting.</li>
     </ul>
   </div>
 
-  <div class="section">
-    <h2>Education</h2>
+  <div>
+    <div class="company">IBM | 2021 - 2024</div>
+    <div class="subtitle">Site Reliability Engineer</div>
+    <div class="role-desc">IBM is a global leader in cloud computing, AI, and business technology.<br>Role Description: Maintained system uptime and reliability. Implemented monitoring, disaster recovery, and predictive maintenance.</div>
     <ul>
-      <li>Master's in Project Management and Business Administration</li>
-      <li>Bachelor's in Computer Science</li>
+      <li>Reduced unplanned outages by 6% via ML-based predictive maintenance.</li>
+      <li>Lowered provisioning costs by 7% with capacity planning strategies.</li>
+      <li>Improved recovery success by 12% during peak events.</li>
     </ul>
   </div>
 
-  <div class="section">
-    <h2>Certifications</h2>
+  <div>
+    <div class="company">Optiva | 2019 - 2021</div>
+    <div class="subtitle">Scrum Master / Engineering Project Manager</div>
+    <div class="role-desc">Optiva is a global BSS solutions provider for communication service providers.<br>Role Description: Managed Agile transitions, cross-functional collaboration, stakeholder alignment, and project delivery.</div>
     <ul>
-      <li>Certified Scrum Master (CSM)</li>
-      <li>PMI-ACP (Agile Certified Practitioner)</li>
-      <li>SAFe Certified Practitioner</li>
-      <li>AWS Cloud Practitioner</li>
+      <li>Delivered 95% of projects on time with a 20% reduction in delays.</li>
+      <li>Managed budgets exceeding $50M, achieving 10–12% savings.</li>
+      <li>Reduced interdepartmental delays by 30%.</li>
     </ul>
   </div>
 
-  <div class="section">
-    <h2>Technical Skills</h2>
+  <div>
+    <div class="company">Equifax | 2012 - 2019</div>
+    <div class="subtitle">Engineering Project Manager | 2015 - 2019</div>
+    <div class="role-desc">Equifax is a global data, analytics, and technology company, providing businesses and individuals with trusted insights to make informed decisions.<br>Role Description: Managed cloud migration, CI/CD pipelines, and Agile transitions.</div>
     <ul>
-      <li>Cloud: AWS, Google Cloud, IBM Cloud, Azure</li>
-      <li>DevOps: Kubernetes, Terraform, CI/CD, Jenkins</li>
-      <li>Project Tools: Jira, Confluence, Trello</li>
-      <li>Languages: Python, Bash, SQL</li>
+      <li>Improved SDLC and team productivity by 20% via Scrum practices.</li>
+      <li>Streamlined workflows and standardized CI/CD, boosting efficiency 20%.</li>
+      <li>Cut deployment times by 50% via automation.</li>
     </ul>
+
+    <div class="subtitle">Technical Project Manager | 2012 - 2015</div>
+    <div class="role-desc">Role Description: Led infrastructure upgrades, API integration, and internal tool management.</div>
+    <ul>
+      <li>Delivered a $600K upgrade project, improving system performance by 40%.</li>
+      <li>Completed cloud migration for 9 tools, cutting costs by 22%.</li>
+      <li>Scaled Agile across 14 teams, accelerating delivery by 30%.</li>
+    </ul>
+  </div>
+</div>
+
+<div class="section">
+  <h2>Education</h2>
+  <ul>
+    <li>Master's Degree in Project Management, Spain – Master Cum Laude</li>
+    <li>Master's Degree in Business Administration, Spain – Master Cum Laude</li>
+    <li>Bachelor's Degree in Computer Science, ULACIT, Costa Rica</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Certifications</h2>
+  <ul>
+    <li>Certified Scrum Master (CSM) – ID: 561348</li>
+    <li>Agile Certified Practitioner (PMI-ACP)</li>
+    <li>SAFe® 4 Certified Practitioner (Scaled Agile, Inc.)</li>
+    <li>Amazon Web Services Cloud Practitioner</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Courses</h2>
+  <ul>
+    <li>Technical: Monitoring Kubernetes, Terraform on IBM Cloud, etc.</li>
+    <li>Soft Skills: 7 Habits for Effective Managers, SMART Goals</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Technical Skills</h2>
+  <ul>
+    <li>Cloud: AWS, Google Cloud, IBM Cloud, Azure</li>
+    <li>Databases: MySQL, PostgreSQL, ElastiCache, Redis</li>
+    <li>DevOps: Kubernetes, Docker, Terraform, Jenkins</li>
+    <li>Programming: Python, JavaScript, Node.js, Shell Script</li>
+    <li>CI/CD: Jenkins, GitLab, CircleCI</li>
+    <li>Monitoring: Prometheus, Grafana, New Relic, Datadog</li>
+    <li>Agile: Scrum, Kanban, SAFe, Lean</li>
+    <li>Tools: Jira, Confluence, Trello, Asana</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Languages</h2>
+  <ul>
+    <li>Spanish: Native</li>
+    <li>English: C2 - Bilingual</li>
+  </ul>
+</div>
+
+<div class="section">
+  <h2>Additional Information</h2>
+  <ul>
+    <li>Leadership: Coaching and mentoring teams to improve performance</li>
+    <li>Collaboration: Expert in cross-functional teamwork and stakeholder engagement</li>
+    <li>Problem Solving: Skilled in incident resolution and proactive improvements</li>
+  </ul>
+</div>
+
   </div>
 </body>
 </html>
