finally a good looking resume

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    background: #fff;
   }
   .main-column {
     padding: 30px 40px;
@@ -55,6 +56,13 @@
     margin-bottom: 30px;
     color: #444;
   }
+  a {
+    color: #1a73e8;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: underline;
+  }
   .section {
     margin-bottom: 28px;
   }
@@ -67,7 +75,7 @@
     margin-top: 6px;
   }
   li {
-    margin-bottom: 5px;
+    margin-bottom: 7px;
   }
   /* Sidebar section titles */
   .side-column h2 {
@@ -76,7 +84,7 @@
   }
   /* Sidebar lists */
   .side-column ul {
-    padding-left: 14px;
+    padding-left: 18px;
   }
   .side-column li {
     margin-bottom: 8px;
@@ -122,14 +130,14 @@
       <h1>Jose Zuniga</h1>
       <div class="contact-info">
         Phone: +506 8897 5841 | Email: josean.111@gmail.com | Heredia, Costa Rica<br />
-        LinkedIn: <a href="https://linkedin.com/in/jose-azuniga" target="_blank">linkedin.com/in/jose-azuniga</a><br />
-        Portfolio: <a href="https://josean111.github.io/jose-zuniga-portfolio-/" target="_blank">josean111.github.io/jose-zuniga-portfolio-/</a>
+        LinkedIn: <a href="https://www.linkedin.com/in/jose-azuniga" target="_blank" rel="noopener noreferrer">linkedin.com/in/jose-azuniga</a><br />
+        Portfolio: <a href="https://josean111.github.io/jose-zuniga-portfolio-/" target="_blank" rel="noopener noreferrer">josean111.github.io/jose-zuniga-portfolio-/</a>
       </div>
 
       <div class="section summary">
         <h2>Professional Summary</h2>
         <p>
-          A results-driven Senior Project Manager and Scrum Master with over 16 years of experience leading cross-functional teams in dynamic environments across diverse industries. Adept at applying Agile methodologies, including Scrum, Kanban, and SAFe, to manage complex projects from concept to delivery. Proven track record delivering high-quality outcomes by optimizing workflows, improving collaboration, and mitigating risks.
+          A results-driven Senior Project Manager and Scrum Master with over 16 years of experience leading cross-functional teams in dynamic environments across diverse industries. Adept at applying Agile methodologies, including Scrum, Kanban, and SAFe, to manage complex projects and programs from concept to successful delivery. Proven ability to drive business value by optimizing workflows, improving team collaboration, risk mitigation, resource planning, and ensuring timely, high-quality project outcomes.
         </p>
       </div>
 
@@ -139,50 +147,73 @@
         <div>
           <h3>iTree Training | Senior Program Agile Manager</h3>
           <p><em>2022 – 2025</em></p>
+          <p>iTree is a global technology company that provides innovative training programs to enhance organizational efficiency and productivity.</p>
+          <p><strong>Role Description:</strong> Led several Agile projects, closely working with cross-functional teams to meet business goals, while ensuring alignment with company priorities. Managed resources, capacity planning, and Agile ceremonies, all while driving business value through the implementation of Scrum and SAFe methodologies.</p>
           <ul>
-            <li>Led Agile projects with Scrum and SAFe methodologies.</li>
-            <li>Increased productivity by 35% and reduced time-to-market by 40%.</li>
-            <li>Improved sprint planning and stakeholder satisfaction by 20%.</li>
+            <li>Led cross-functional teams across Agile projects, including planning, execution, and delivery using Scrum and SAFe methodologies.</li>
+            <li>Increased productivity by 35% and reduced time-to-market by 40% through the successful adoption of Agile practices.</li>
+            <li>Improved sprint planning and backlog refinement, reducing delivery delays by 25% and increasing on-time project delivery by 30%.</li>
+            <li>Established strong relationships with key stakeholders, resulting in 20% higher stakeholder satisfaction through transparency, regular reporting, and better risk management.</li>
           </ul>
         </div>
 
         <div>
           <h3>IBM | Site Reliability Engineer</h3>
           <p><em>2021 – 2024</em></p>
+          <p>IBM is a global leader in cloud computing, artificial intelligence, and business technology, delivering cutting-edge solutions to businesses across industries.</p>
+          <p><strong>Role Description:</strong> Focused on maintaining system uptime, reliability, and continuous improvement through proactive strategies. Led the monitoring of systems, designed disaster recovery plans, and implemented machine learning-driven predictive maintenance.</p>
           <ul>
-            <li>Monitored systems to ensure uptime and reliability.</li>
-            <li>Reduced unplanned outages by 6% through predictive maintenance.</li>
-            <li>Enhanced disaster recovery success by 12% during peak traffic.</li>
+            <li>Monitored and maintained production systems, ensuring optimal reliability and performance in line with Service Level Objectives (SLOs) and Service Level Indicators (SLIs).</li>
+            <li>Reduced unplanned outages by 6% through predictive maintenance and utilizing machine learning models and sensor data.</li>
+            <li>Designed capacity planning strategies that led to a 7% reduction in provisioning costs, ensuring efficient infrastructure scalability.</li>
+            <li>Enhanced disaster recovery processes, improving recovery success rates by 12% during peak traffic events.</li>
           </ul>
         </div>
 
         <div>
           <h3>Optiva | Scrum Master / Engineering Project Manager</h3>
           <p><em>2019 – 2021</em></p>
+          <p>Optiva is a leading provider of business support systems (BSS) solutions for communication service providers worldwide.</p>
+          <p><strong>Role Description:</strong> Led teams transitioning to Agile methodologies while managing complex engineering projects. Worked closely with various departments, facilitating communication and aligning project deliverables with customer and stakeholder needs.</p>
           <ul>
-            <li>Delivered 95% of projects on time over a 3-year period.</li>
-            <li>Managed budgets over $50M, achieving 10-12% cost savings.</li>
-            <li>Reduced interdepartmental delays by 30% through collaboration.</li>
+            <li>Coordinated cross-functional teams across time zones, ensuring alignment and meeting SLAs for project execution.</li>
+            <li>Delivered 95% of projects on time over a 3-year period, cutting project delays by 20% through effective scheduling and risk management.</li>
+            <li>Managed budgets totaling $50M+, achieving cost savings of 10-12% through resource optimization and cost control.</li>
+            <li>Facilitated collaboration across engineering, R&D, and manufacturing teams, reducing interdepartmental delays by 30%.</li>
           </ul>
         </div>
 
         <div>
-          <h3>Equifax | Engineering Project Manager / Technical Project Manager</h3>
-          <p><em>2012 – 2019</em></p>
+          <h3>Equifax | Engineering Project Manager</h3>
+          <p><em>2015 – 2019</em></p>
+          <p>Equifax is a global data, analytics, and technology company, providing businesses and individuals with trusted insights to make informed decisions.</p>
+          <p><strong>Role Description:</strong> Managed projects focused on cloud migration and CI/CD pipelines while enhancing the company's software delivery lifecycle. Served as Scrum Master during the Agile transition phase.</p>
           <ul>
-            <li>Led $600K IT infrastructure upgrade improving system performance by 40%.</li>
-            <li>Migrated enterprise tools to cloud achieving 22% operational cost savings.</li>
-            <li>Introduced Agile practices across 14 teams improving delivery speed by 30%.</li>
+            <li>Increased team productivity by 20% through the adoption of Scrum methodologies, improving SDLC processes and ensuring timely delivery of updates.</li>
+            <li>Improved cross-functional workflow efficiency by 20% by standardizing the CI/CD pipeline.</li>
+            <li>Automated build and deployment processes, speeding up deployment cycles by 50% and eliminating bottlenecks.</li>
           </ul>
         </div>
+
+        <div>
+          <h3>Equifax | Technical Project Manager</h3>
+          <p><em>2012 – 2015</em></p>
+          <p><strong>Role Description:</strong> Led infrastructure upgrades, managed internal tools development, and integrated APIs to enhance operational efficiency.</p>
+          <ul>
+            <li>Managed a $600K IT infrastructure upgrade, improving system performance by 40% and reducing downtime by 2 hours per month.</li>
+            <li>Led the cloud migration of 9 enterprise tools, resulting in 22% cost savings in operational expenses and enhanced system scalability.</li>
+            <li>Introduced Agile practices across 14 teams, improving delivery speed by 30% and reducing project cycle times by 50%.</li>
+          </ul>
+        </div>
+
       </div>
 
       <div class="section education">
         <h2>Education</h2>
         <ul>
-          <li>Master's Degree in Project Management | Master Cum Laude | Spain</li>
-          <li>Master's Degree in Business Administration | Master Cum Laude | Spain</li>
-          <li>Bachelor's Degree in Computer Science | ULACIT, Costa Rica</li>
+          <li>Master's Degree in Project Management &nbsp;|&nbsp; Master Cum Laude &nbsp;|&nbsp; Spain</li>
+          <li>Master's Degree in Business Administration &nbsp;|&nbsp; Master Cum Laude &nbsp;|&nbsp; Spain</li>
+          <li>Bachelor's Degree in Computer Science &nbsp;|&nbsp; ULACIT, Costa Rica</li>
         </ul>
       </div>
     </div>
@@ -191,8 +222,8 @@
       <div class="section achievements">
         <h2>Key Achievements</h2>
         <ul>
-          <li>Boosted team efficiency by over 30% at Optiva</li>
-          <li>Automated deployment cycles, speeding release times by 50%</li>
+          <li>Boosted cross-department efficiency (>30%) at Optiva</li>
+          <li>Automated deployments (50% faster cycles, Equifax)</li>
           <li>Reduced costs and improved system reliability (IBM, iTree)</li>
         </ul>
       </div>
@@ -201,8 +232,8 @@
         <h2>Skills</h2>
         <ul>
           <li>Agile (Scrum, Kanban, SAFe, Lean)</li>
-          <li>Cloud: AWS, Google Cloud, IBM Cloud, Azure</li>
-          <li>DevOps: Kubernetes, Docker, Terraform, Jenkins</li>
+          <li>Cloud Platforms: AWS, Google Cloud, IBM Cloud, Azure</li>
+          <li>DevOps Tools: Kubernetes, Docker, Terraform, Jenkins</li>
           <li>Programming: Python, JavaScript, Node.js, Shell Script</li>
           <li>Project Management Tools: Jira, Confluence, Trello, Asana</li>
         </ul>
@@ -211,19 +242,18 @@
       <div class="section certifications">
         <h2>Certifications</h2>
         <ul>
-          <li>Certified Scrum Master (CSM)</li>
+          <li>Certified Scrum Master (CSM) (ID: 561348)</li>
           <li>Agile Certified Practitioner (PMI-ACP)</li>
-          <li>SAFe® 4 Certified Practitioner</li>
-          <li>AWS Cloud Practitioner</li>
+          <li>SAFe® 4 Certified Practitioner (Scaled Agile, Inc.)</li>
+          <li>Amazon Web Services Cloud Practitioner</li>
         </ul>
       </div>
 
       <div class="section courses">
         <h2>Courses</h2>
         <ul>
-          <li>Monitoring Kubernetes Fundamentals</li>
-          <li>Terraform on IBM Cloud</li>
-          <li>7 Habits for Effective Managers</li>
+          <li>Technical: Introduction to Monitoring Kubernetes, Kubernetes Fundamentals, Monitoring a Kubernetes Cluster, Terraform on IBM Cloud</li>
+          <li>Soft Skills: 7 Habits for Effective Managers, SMART Goals for Managers</li>
         </ul>
       </div>
 
@@ -252,10 +282,9 @@
       <div class="section additional-info">
         <h2>Additional Information</h2>
         <ul>
-          <li>Leadership: Coaching and mentoring teams</li>
-          <li>Collaboration: Cross-functional teamwork</li>
-          <li>Problem Solving: Critical incidents management</li>
-          <li>Work Permit: Valid Canadian work permit</li>
+          <li>Leadership: Coaching and mentoring teams to improve productivity and performance</li>
+          <li>Collaboration: Expertise in cross-functional teamwork and stakeholder management</li>
+          <li>Problem Solving: Adept at handling critical incidents and providing proactive solutions</li>
         </ul>
       </div>
     </div>
