--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     padding: 30px 25px;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px; /* reduced gap from 30px */
   }
   h1, h2, h3 {
     margin: 0;
@@ -42,18 +42,18 @@
     font-size: 18px;
     font-weight: 700;
     border-bottom: 1px solid #ddd;
-    padding-bottom: 6px;
-    margin-bottom: 12px;
+    padding-bottom: 4px;  /* reduced from 6px */
+    margin-bottom: 8px;   /* reduced from 12px */
   }
   h3 {
     font-size: 15px;
     color: #254263;
-    margin-top: 14px;
-    margin-bottom: 6px;
+    margin-top: 10px;     /* reduced from 14px */
+    margin-bottom: 4px;   /* reduced from 6px */
   }
   .contact-info {
     font-size: 14px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;  /* reduced from 30px */
     color: #444;
   }
   a {
@@ -64,18 +64,19 @@
     text-decoration: underline;
   }
   .section {
-    margin-bottom: 28px;
+    margin-bottom: 16px; /* reduced from 28px */
   }
   p, li {
     font-size: 14px;
-    line-height: 1.5;
+    line-height: 1.4;  /* slightly tighter */
+    margin-bottom: 4px; /* reduced from 7px */
   }
   ul {
     padding-left: 20px;
-    margin-top: 6px;
+    margin-top: 4px;  /* reduced from 6px */
   }
   li {
-    margin-bottom: 7px;
+    margin-bottom: 4px; /* reduced from 7px */
   }
   /* Sidebar section titles */
   .side-column h2 {
@@ -87,7 +88,7 @@
     padding-left: 18px;
   }
   .side-column li {
-    margin-bottom: 8px;
+    margin-bottom: 6px; /* reduced from 8px */
     font-size: 14px;
     color: #d6dbdf;
   }
@@ -123,6 +124,7 @@
     }
   }
 </style>
+
 </head>
 <body>
   <div class="container">
